@@ -1,5 +1,14 @@
 2000-10-24  Akim Demaille  <akim@epita.fr>
 
+	* acgeneral.m4 (AC_OUTPUT): Don't play with `trap'.
+	(_AC_INIT_PREPARE): Trap after having created config.log.
+	Also trap on 0.
+	When trapped, report why in config.log.
+	(AC_MSG_WARN, AC_MSG_ERROR): Also output the message in
+	config.log.
+
+2000-10-24  Akim Demaille  <akim@epita.fr>
+
 	* acgeneral.m4 (_AC_SHELL_DIRNAME): Rename as...
 	(AC_SHELL_DIRNAME): this.
 	s/X$1/X[]$1/ so that when $1 is a macro, it's given a chance to be
